--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,17 +3,14 @@
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
     database_host:     127.0.0.1
-    database_port:     ~
-    database_name:     symfony
-    database_user:     root
+    database_port:     3306
+    database_name:     lethal_assassins
+    database_user:     ~
     database_password: ~
-    # You should uncomment this if you want use pdo_sqlite
-    # database_path: "%kernel.root_dir%/data.db3"
-
-    mailer_transport:  smtp
-    mailer_host:       127.0.0.1
-    mailer_user:       ~
-    mailer_password:   ~
+    #mailer_transport:  smtp
+    #mailer_host:       127.0.0.1
+    #mailer_user:       ~
+    #mailer_password:   ~
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
