--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "test": "tests"
   },
   "scripts": {
+    "dev": "node-sass -w app/Resources/styles/ -o web/styles/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "cache-clear": "sudo -u www-data php bin/console c:cl",
     "deploy": "git pull origin master && npm run cache-clear",
-    "start": "docker start lethal-mysql && php bin/console server:start",
-    "end": "php bin/console server:stop && docker stop lethal-mysql"
+    "start": "docker start lethal-mysql && php bin/console server:start && npm run dev",
+    "end": "php bin/console server:stop && docker stop lethal-mysql",
+    "build": "node-sass --output-style=compressed app/Resources/styles/ -o web/styles/"
   },
   "repository": {
     "type": "git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "node-sass": "^4.1.1"
+  }
 }
