Revamped esl roster management.
Signed-off-by: bluesaberist <bluesaberist@gmail.com>

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -20,5 +20,5 @@ services:
     class: AppBundle\services\EslModel
     arguments: ["@database_connection"]
   model.player:
-    class: AppBundle\services\PlayerModelS
+    class: AppBundle\services\PlayerModel
     arguments: ["@database_connection"]
