Implemented cache bust for assets.
Signed-off-by: bluesaberist <bluesaberist@gmail.com>

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -43,6 +43,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+      cacheBust: "0"
 
 # Doctrine Configuration
 doctrine:
