--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,4 +28,5 @@ security:
   access_control:
     - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/change, roles: ROLE_ADMIN }
+    - { path: ^/admin, roles: ROLE_ADMIN }
     - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
