--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -18,7 +18,7 @@ services:
 
   model.esl:
     class: AppBundle\services\EslModel
-    arguments: ["@database_connection"]
+    arguments: ["@database_connection", "@logger"]
   model.player:
     class: AppBundle\services\PlayerModel
-    arguments: ["@database_connection"]
+    arguments: ["@database_connection", "@logger"]
